--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^2.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
